<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.MoodAddActivity">

    <!-- Scrollable Content -->
    <ScrollView
        android:id="@+id/scrollView"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:background="@color/white" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Everything inside here is scrollable -->
                <LinearLayout
                    android:id="@+id/backBtnLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnBack"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:contentDescription="@string/back"
                        android:scaleType="fitCenter"
                        android:src="@drawable/left_arrow"
                        app:tint="@color/black" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etReasonWhyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:maxLength="200"
                    android:hint="@string/hint_reason_why_text" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/spinnerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">

                    <Spinner
                        android:id="@+id/spinnerMood"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginHorizontal="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/spinnerSocialSituation" />

                    <Spinner
                        android:id="@+id/spinnerSocialSituation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginHorizontal="10dp"
                        android:entries="@array/social_situation_array"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/spinnerMood"
                        app:layout_constraintRight_toRightOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageButton
                    android:id="@+id/btnInsertImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/insert_image"
                    android:scaleType="fitCenter"
                    android:src="@drawable/mood" />

                <TextView
                    android:id="@+id/datePickerAddMood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:autofillHints="Date"
                    android:focusable="false"
                    android:ems="10"
                    android:textColor="@color/black"
                    android:hint="@string/date_for_mood_event"
                    android:inputType="date" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/checkboxes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp">

                    <CheckBox
                        android:id="@+id/privacyCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/privateString"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/checkboxShareLocation" />

                    <CheckBox
                        android:id="@+id/checkboxShareLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/share_location"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/privacyCheckBox"
                        app:layout_constraintRight_toRightOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Footer with White Background -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="8dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="80dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@color/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
