...

            <Button
                android:visibility="gone"
                android:id="@+id/followReqBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/logOutBtn"
                app:layout_constraintLeft_toRightOf="@id/tvUsername"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cornerRadius="5dp"
                android:backgroundTint="@color/button"
                android:layout_marginHorizontal="4dp"
...
                app:layout_constraintLeft_toRightOf="@id/followReqBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cornerRadius="5dp"
                android:backgroundTint="@color/button"
                android:layout_marginHorizontal="4dp"
                android:text="Log Out" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        </LinearLayout>


    <!-- Mood list for the user -->
    <com.example.y.utils.MoodListView
        android:id="@+id/listviewMoodEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMoodBtn"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/add"
        android:backgroundTint="@color/addMood"
        android:contentDescription="Mood add button"
        app:elevation="8dp" />

</FrameLayout>

